force-app/main/default/objects/Shared_Review_Comment__c/Shared_Review_Comment__c.object-meta.xml
<CustomObject>
    <description>Inline comments on collaborative drafts.</description>
    <label>Shared Review Comment</label>
    <pluralLabel>Shared Review Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>