force-app/main/default/objects/Shared_Review_Comment__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>Comment author.</description>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Review Comments</relationshipLabel>
    <relationshipName>Review_Comments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>