force-app/main/default/objects/Shared_Review_Comment__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <description>Related session.</description>
    <label>Session</label>
    <referenceTo>Shared_Review_Session__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>